Fixed C++17 support with unflagging gnu++11.

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,13 +13,16 @@ platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 
+build_unflags =
+  -std=gnu++11
+
 build_flags =
-  -std=c++17          ; use the C++17 standard for compiling
+  -std=gnu++17          ; use the C++17 standard for compiling
   -Wall               ; additional compiler warnings
   -Wextra             ; additional compiler warnings
   ;-Wconversion        ; treat lossy conversions as errors (core libs litter, unhelpful)
   -fno-exceptions     ; not currently utilized C++ feature (exceptions)
-  ; -fno-rtti           ; not currently utilized C++ feature (runtime type information)
+  ;-fno-rtti           ; not currently utilized C++ feature (runtime type information)
 ; For debug:
   ;-g
   ;-DDEBUG_BUILD
