--- a/platformio.ini
+++ b/platformio.ini
@@ -21,7 +21,7 @@ build_flags =
   -Wall               ; additional compiler warnings
   -Wextra             ; additional compiler warnings
   ;-Wconversion        ; treat lossy conversions as errors (core libs litter, unhelpful)
-  -fno-exceptions     ; not currently utilized C++ feature (exceptions)
+  ;-fno-exceptions     ; not currently utilized C++ feature (exceptions)
   ;-fno-rtti           ; not currently utilized C++ feature (runtime type information)
 ; For debug:
   ;-g
