--- a/platformio.ini
+++ b/platformio.ini
@@ -8,11 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32doit-devkit-v1]
-platform = espressif32
-board = esp32doit-devkit-v1
-framework = arduino
-
+[env]
 build_unflags =
   -std=gnu++11
 
@@ -26,3 +22,10 @@ build_flags =
 ; For debug:
   ;-g
   ;-DDEBUG_BUILD
+
+[env:esp32doit-devkit-v1]
+platform = espressif32
+board = esp32doit-devkit-v1
+framework = arduino
+lib_ldf_mode = chain+
+monitor_speed = 115200
