--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
+# Ignore PlatformIO build and dependency files.
 .pio
-.vscode/.browse.c_cpp.db*
-.vscode/c_cpp_properties.json
-.vscode/launch.json
-.vscode/ipch
+
+# Ignore Visual Studio Code specific files
+.vscode
