--- a/platformio.ini
+++ b/platformio.ini
@@ -11,6 +11,7 @@
 [env]
 build_unflags =
   -std=gnu++11
+test_framework = googletest
 
 build_flags =
   -std=gnu++17          ; use the C++17 standard for compiling
