--- a/platformio.ini
+++ b/platformio.ini
@@ -9,9 +9,9 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env]
+test_framework = googletest
 build_unflags =
   -std=gnu++11
-test_framework = googletest
 
 build_flags =
   -std=gnu++17          ; use the C++17 standard for compiling
@@ -30,3 +30,4 @@ board = esp32doit-devkit-v1
 framework = arduino
 lib_ldf_mode = chain+
 monitor_speed = 115200
+monitor_raw = true
