Disabled exception and RTTI features in compilation. They are currently not utilized features of C++.

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,8 +18,8 @@ build_flags =
   -Wall               ; additional compiler warnings
   -Wextra             ; additional compiler warnings
   ;-Wconversion        ; treat lossy conversions as errors (core libs litter, unhelpful)
-  ;-fno-exceptions     ; not currently utilized C++ feature (exceptions)
-  ;-fno-rtti           ; not currently utilized C++ feature (runtime type information)
+  -fno-exceptions     ; not currently utilized C++ feature (exceptions)
+  -fno-rtti           ; not currently utilized C++ feature (runtime type information)
 ; For debug:
   ;-g
   ;-DDEBUG_BUILD
