Updated gitignore for compilation database. This is due to privacy concerns but necessary for SonarLint support.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Ignore PlatformIO build and dependency files.
 .pio
+# Ignore compilation database file (for SonarLint support)
+compile_commands.json
 
 # Ignore Visual Studio Code specific files
 .vscode
