--- a/.github/workflows/platformioci.yaml
+++ b/.github/workflows/platformioci.yaml
@@ -22,3 +22,6 @@ jobs:
 
       - name: Build PlatformIO Project
         run: pio run
+
+      - name: Run PlatformIO Check
+        run: pio check --skip-packages
