--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,12 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[upload_settings]
+upload_speed = 460800
+monitor_speed = 115200
+
 [env]
+extends = upload_settings
 test_framework = googletest
 build_unflags =
   -std=gnu++11
@@ -20,14 +25,15 @@ build_flags =
   ;-Wconversion        ; treat lossy conversions as errors (core libs litter, unhelpful)
   -fno-exceptions     ; not currently utilized C++ feature (exceptions)
   -fno-rtti           ; not currently utilized C++ feature (runtime type information)
+  -D MONITOR_SPEED=${upload_settings.monitor_speed} ; set macro to reference monitor speed
+  -D LOGLVL=DEBUG     ; set macro to reference logging level
 ; For debug:
   ;-g
-  ;-DDEBUG_BUILD
+  ;-D DEBUG_BUILD
 
 [env:esp32doit-devkit-v1]
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 lib_ldf_mode = chain+
-monitor_speed = 115200
 monitor_raw = true
