Added dependency for ESPAsyncWebServer.

--- a/platformio.ini
+++ b/platformio.ini
@@ -38,3 +38,6 @@ framework = arduino
 lib_ldf_mode = chain+
 monitor_raw = true
 extra_scripts = pre:html_converter.py
+lib_deps =
+  https://github.com/me-no-dev/ESPAsyncTCP.git
+  https://github.com/me-no-dev/ESPAsyncWebServer.git
